fix: removing hover effect on mobile

--- a/src/components/ProductTab/ProductTab.module.scss
+++ b/src/components/ProductTab/ProductTab.module.scss
@@ -133,4 +133,27 @@
       border-radius: 8px;
     }
   }
+
+  @media screen and (max-width: 1024px) {
+    &:hover {
+      box-shadow: 0px 4px 40px rgba(35, 35, 35, 0.1);
+
+      .preview {
+        .quickReview {
+          display: none;
+        }
+
+        .image {
+          img {
+            -webkit-filter: brightness(100%);
+            -webkit-transition: all 0.3s ease;
+            -moz-transition: all 0.3s ease;
+            -o-transition: all 0.3s ease;
+            -ms-transition: all 0.3s ease;
+            transition: all 0.3s ease;
+          }
+        }
+      }
+    }
+  }
 }
